[gd_scene load_steps=4 format=2]

[ext_resource path="res://Tower.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="CircleShape2D" id=2]
radius = 192.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D_vision" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_vision"]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 192, 0 )
collide_with_areas = true

[node name="Bullet_Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="area_shape_entered" from="Area2D_vision" to="." method="_on_Area2D_vision_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D_vision" to="." method="_on_Area2D_vision_area_shape_exited"]
